--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>The Homework Project</title>
-    <body>The Homework Project</body>
+    <body>
+      The Homework Project
+      
+      {{{body}}}
+      
+    </body>
   </head>
 </html>
