--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>The Homework Project</title>
-    <body>The Homework Project</body>
+    <body>
+    <h1>The Homework Project</h1>
+    </body>
   </head>
 </html>
