--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <title>The Homework Project</title>
     <body>
     <h1>The Homework Project</h1>
-  
+  Main.handlebars
       {{{body}}}
       
     </body>
