--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title>The Homework Project</title>
     <body>
-    <h1>The Homework Project</h1>
 
       {{{body}}}
       
