--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -1,3 +1,17 @@
 <h1>Team Portfolio</h1>
 
-<h2>Team Members</h2>
+<h2>Meet the Members</h2>
+
+ <div class="memberName">Ben Cheung
+
+ <div class = "PositionDiv">
+  <p> Database and server </p>
+ </div>
+ <div class="Description">
+<p></p>
+ </div>
+
+ <div class="memberName">Jonathan Gatley </div>
+
+
+
