--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>The Homework Project</title>
-    <body>
-
-      {{{body}}}
-      
-    </body>
+    <title>Zembo</title>
   </head>
+
+  <body>
+
+    {{{body}}}
+      
+  </body>
 </html>
