my first commit

--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -2,9 +2,9 @@
 
 <h2>Meet the Members</h2>
 
- <div class="memberName">Ben Cheung
+ <div class="memberName">Ben Cheung </div>
 
- <div class = "PositionDiv">
+  <div class = "PositionDiv">
   <p> Database and server </p>
  </div>
  <div class="Description">
@@ -13,5 +13,39 @@
 
  <div class="memberName">Jonathan Gatley </div>
 
+   <div class = "PositionDiv">
+  <p> Database and server </p>
+ </div>
+ <div class="Description">
+<p></p>
+ </div>
+
+
+ <div class="memberName">Harsh Keswni </div>
+
+   <div class = "PositionDiv">
+  <p> Database and server </p>
+ </div>
+ <div class="Description">
+<p></p>
+ </div>
+
+  <div class="memberName">Zach Milrod </div>
+
+   <div class = "PositionDiv">
+  <p> Database and server </p>
+ </div>
+ <div class="Description">
+<p></p>
+ </div>
+
+  <div class="memberName">Anthony Li </div>
+
+   <div class = "PositionDiv">
+  <p> Database and server </p>
+ </div>
+ <div class="Description">
+<p></p>
+ </div>
 
 
