--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -1,3 +1,108 @@
-<h1>The Homework Project</h1>
+<!DOCTYPE html>
 
-Ever feeling lonely when you're doing work?
+<html>
+	<head>
+		<meta http-equiv="refresh" content="300" >
+		<meta charset="utf-8" />
+		<meta name="author" content="therealharsh" />
+		<meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
+
+		<link type="text/css" rel="stylesheet" href="css/demo.css" />
+		<link type="text/css" rel="stylesheet" href="dist/css/jquery.mmenu.all.css" />
+		
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script type="text/javascript" src="dist/js/jquery.mmenu.min.all.js"></script>
+		<script type="text/javascript">
+			$(function() {
+				$('nav#menu').mmenu();
+			});
+		</script>
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
+
+	</head>
+
+		<div id="page">
+			<div class="header">
+			<a href="#menu"></a>
+				Zembo
+			</div>
+			</div>
+			<div class="content">	
+			
+			</div>
+		
+			<div id="cont">
+			<div id="tp">
+
+				<div id="head">
+					<ul id="test">
+						<center><p1><b>About Zembo</b></p1></center>
+					</ul>
+				</div>
+
+				<div id="panel1">
+					<ul id="test">
+						<b><center><p2>The Idea</p2></center></b>
+						<div id="content">
+							<p3>
+							Not know what Zembo is? Zembo is an app that allows students to communicate and connect with each other. Eliminate the tedium and stress of maintaining study groups or joining cliques. Connect with your entire class instantly.
+
+							Zembo is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA forum environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
+							</p3>
+						</div>
+					</ul>
+				</div>
+
+
+
+				<div id="panel3">
+					<ul id="test">
+						<b><center><p2>Why?</p2></center></b>
+						<div id="quote">
+							<p3>
+								<center><i>“Studying in groups helps students learn more effectively. More than 20 years of academic research has consistently demonstrated that fact” -Neil Schoenherr</i></center><br>
+							</p3>
+						</div>
+						<div id="content">
+							<p3>
+								Despite the fact that social media has inarguably become an integral part of student life, there does not exist a reliable way for students to connect with each other on a classroom to classroom basis. Piazza and comparable applications offer similar features, but without the convenience and functionality of Zembo. Piazza only allows instructors to create and moderate classes, while students cannot create groups of their own. Additionally, Piazza does not offer a “private” group chat or functions that encourage actual congregation. We enable students to meet up and work together!<br><br>
+
+									<div id="list">
+										<i>Studying with Zembo will allow students to:</i>
+										<ul id="anthony">
+											<li>Cover more ground per each session</li>
+											<li>Share notes and announcements</li>
+											<li>Socialize</li>
+											<li>Boost motivation</li>
+										</ul>
+									</div>
+							</p3>
+						</div>
+					</ul>
+				</div>
+
+
+				<div id="panel4">
+					<ul id="test">
+						<b><center><p2>Our Goal</p2></center></b>
+						<div id="content">
+							<center><p3>Our goal is to create a more enjoyable, convenient, and stress free way for students to work cooperatively on campus.</p3></center>
+						</div>
+					</ul>
+				</div>
+
+			</div>
+			<nav id="menu">
+				<ul>
+					<li><a href="about">About</a></li>
+					<li><a href="team">Team</a></li>
+					<li><a href="mockups">Mockups</a></li>
+				</ul>
+			</nav>
+		</div>
+	
+</html>
