--- a/views/layouts/mockup.handlebars
+++ b/views/layouts/mockup.handlebars
@@ -1,3 +1,12 @@
 <div>
-  <img src = {{imgURL}} >
+  <center><img src = {{imgURL}}></center>
+</div>
+
+<div>
+  <center>
+    <a href=home>Home</a>
+    <a href=login>Login</a>
+    <a href=profile>Profile</a>
+    <a href=admin>Admin</a>
+  </center>
 </div>
