--- a/views/layouts/mockups.handlebars
+++ b/views/layouts/mockups.handlebars
@@ -54,21 +54,21 @@
 				<div id="home">
 					<center>
 						<p2>Home Page</p2><br>
-						<img src = "imgs/HomePage.png"><br><br>
+						<img src = "imgs/Home.png"><br><br>
 					</center>
 				</div>
 
 				<div id="profile">
 					<center>
 						<p2>Profile Page</p2><br>
-						<img src = "imgs/ProfileView.png"><br><br>
+						<img src = "imgs/Profile.png"><br><br>
 					</center>	
 				</div>
 
 				<div id="admin">
 					<center>
 						<p2>Admin Page</p2><br>
-						<img src = "imgs/AdminView.png">
+						<img src = "imgs/Admin.png">
 					</center>
 				</div>
 				
