--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -4,61 +4,53 @@
 <!-- need to make the link add querystring to link to relevant page   -->
 
   {{#each members}}
-  <div class="memberName"><a href="">{{this.fname}} {{this.lname}}</a></div>
-      <div class="Description">{{this.desc}} </div>
-      <div>. </div>
-      <div> </div>
+  <div class="memberName"><a href="team?user=">{{this.fname}} {{this.lname}}</a></div>
+    <div class="Description">{{this.desc}}</div>
+    <div></div>
+    <div></div>
   {{/each}}
 
-
-
-
-
-
- <!-- <div class="memberName">Ben Cheung </div>
+<!--   <div class="memberName">Ben Cheung</div>
 
   <div class = "PositionDiv">
-  <p> Database and server </p>
- </div>
- <div class="Description">
-<p></p>
- </div>
+    <p> Database and server </p>
+  </div>
+  <div class="Description">
+    <p></p>
+  </div>
 
- <div class="memberName">Jonathan Gatley </div>
+  <div class="memberName">Jonathan Gatley</div>
 
-   <div class = "PositionDiv">
-  <p> Database and server </p>
- </div>
- <div class="Description">
-<p></p>
- </div>
+  <div class = "PositionDiv">
+    <p> Database and server </p>
+  </div>
+  <div class="Description">
+    <p></p>
+  </div>
 
+  <div class="memberName">Harsh Keswani</div>
 
- <div class="memberName">Harsh Keswni </div>
+  <div class = "PositionDiv">
+    <p> Database and server </p>
+  </div>
+  <div class="Description">
+    <p></p>
+  </div>
 
-   <div class = "PositionDiv">
-  <p> Database and server </p>
- </div>
- <div class="Description">
-<p></p>
- </div>
+  <div class="memberName">Zach Milrod</div>
 
-  <div class="memberName">Zach Milrod </div>
+  <div class = "PositionDiv">
+    <p> Database and server </p>
+  </div>
+  <div class="Description">
+    <p></p>
+  </div>
 
-   <div class = "PositionDiv">
-  <p> Database and server </p>
- </div>
- <div class="Description">
-<p></p>
- </div>
+  <div class="memberName">Anthony Li</div>
 
-  <div class="memberName">Anthony Li </div>
-
-   <div class = "PositionDiv">
-  <p> Database and server </p>
- </div>
- <div class="Description">
-<p></p>
- </div>
- -->
-
+  <div class = "PositionDiv">
+    <p> Database and server </p>
+  </div>
+  <div class="Description">
+    <p></p>
+  </div> -->
