Added splash mockup and route

--- a/views/layouts/mockup.handlebars
+++ b/views/layouts/mockup.handlebars
@@ -1,9 +1,16 @@
+<style>
+test a:visited{
+  text-decoration: none;
+}
+</style>
+
 <div>
   <center><img src = {{imgURL}}></center>
 </div>
 
-<div>
+<div id = "test">
   <center>
+    <a href=splash>Splash</a>
     <a href=home>Home</a>
     <a href=login>Login</a>
     <a href=profile>Profile</a>
