--- a/views/layouts/mockup.handlebars
+++ b/views/layouts/mockup.handlebars
@@ -1,19 +1,13 @@
-<style>
-test a:visited{
-  text-decoration: none;
-}
-</style>
-
 <div>
   <center><img src = {{imgURL}}></center>
 </div>
 
-<div id = "test">
+<div>
   <center>
-    <a href=splash>Splash</a>
-    <a href=home>Home</a>
-    <a href=login>Login</a>
-    <a href=profile>Profile</a>
-    <a href=admin>Admin</a>
+    <a href="/">Splash</a>
+    <a href="home">Home</a>
+    <a href="login">Login</a>
+    <a href="profile">Profile</a>
+    <a href="admin">Admin</a>
   </center>
 </div>
