--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -48,9 +48,9 @@
 						<b><center><p2>The Idea</p2></center></b>
 						<div id="content">
 							<p3>
-							Not know what Zembo is? Zembo is an app that allows students to communicate and connect with each other. Eliminate the tedium and stress of maintaining study groups or joining cliques. Connect with your entire class instantly.
+							Don't know what Zembo is? Zembo is an app that allows students to communicate and connect with each other. Eliminate the tedium and stress of maintaining study groups or joining cliques. Connect with your entire class instantly.
 
-							Zembo is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA forum environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
+							Zembo is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA discussion-based environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
 							</p3>
 						</div>
 					</ul>
