--- a/views/layouts/mockups.handlebars
+++ b/views/layouts/mockups.handlebars
@@ -46,6 +46,13 @@
 
 				<div id="login">
 					<center>
+						<p2>Splash Page</p2><br>
+						<img src = "imgs/splash.png"><br><br>
+					</center>
+				</div>
+
+				<div id="home">
+					<center>
 						<p2>Login Page</p2><br>
 						<img src = "imgs/Login.png"><br><br>
 					</center>
