--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -97,9 +97,10 @@
 			</div>
 			<nav id="menu">
 				<ul>
+					<li><a href="http://localhost:3000">Home</a></li>
 					<li><a href="about">About</a></li>
 					<li><a href="team">Team</a></li>
-					<li><a href="mockups">Mockups</a></li>
+					<li><a href="mockups">Layout</a></li>
 				</ul>
 			</nav>
 		</div>
