--- a/views/layouts/mockups.handlebars
+++ b/views/layouts/mockups.handlebars
@@ -40,7 +40,7 @@
 
 				<div id="head">
 					<ul id="test">
-						<center><p1><b>Mockups</b></p1></center>
+						<center><p1><b>Layout</b></p1></center>
 					</ul>
 				</div>
 
@@ -83,9 +83,10 @@
 			</div>
 			<nav id="menu">
 				<ul>
+					<li><a href="http://localhost:3000">Home</a></li>
 					<li><a href="about">About</a></li>
 					<li><a href="team">Team</a></li>
-					<li><a href="mockups">Mockups</a></li>
+					<li><a href="mockups">Layout</a></li>
 				</ul>
 			</nav>
 		</div>
