--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -55,7 +55,7 @@
       <!-- need to make the link add querystring to link to relevant page   -->
 
         {{#each members}}
-        <div class="memberName"><a href="team?user=">{{this.fname}} {{this.lname}}</a></div>
+        <div class="memberName"><a href="?user={{this.user}}">{{this.fname}} {{this.lname}}</a></div>
           <div class="Description">{{this.desc}}</div>
           <div></div>
           <div></div>
