--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -9,7 +9,7 @@
 
     <link type="text/css" rel="stylesheet" href="css/demo.css" />
     <link type="text/css" rel="stylesheet" href="dist/css/jquery.mmenu.all.css" />
-    
+    <link type="text/css" rel="stylesheet" href="css/teamPage.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
