added and linked css for memberpage

--- a/views/layouts/members.handlebars
+++ b/views/layouts/members.handlebars
@@ -1,2 +1,9 @@
+<html>
+<link type="text/css" rel="stylesheet" href="css/memberPage.css">
+
+
 <h1>{{memberx.fname}} {{memberx.lname}}</h1>
 <div class="Description"> {{memberx.desc}} </div>
+
+
+</html>
