--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -76,6 +76,7 @@
 
         {{#each members}}
         <div class="memberName"><a href="?user={{this.user}}">{{this.fname}} {{this.lname}}</a></div>
+        <div class="positionClass">{{this.pos}}</div>
          <!-- <div class="Description">{{this.desc}}</div> -->
           <div></div>
           <div></div>
