--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -48,9 +48,9 @@
 						<b><center><p2>The Idea</p2></center></b>
 						<div id="content">
 							<p3>
-							Don't know what Zembo is? Zembo is an app that allows students to communicate and connect with each other. Eliminate the tedium and stress of maintaining study groups or joining cliques. Connect with your entire class instantly.
+							Zembo is an app that allows students to communicate and connect with each other. It helps you to eliminate the tedium and stress of maintaining study groups or joining cliques. The idea is to allow you to connect with your entire class instantly.
 
-							Zembo is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA discussion-based environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
+							It is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA discussion-based environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
 							</p3>
 						</div>
 					</ul>
@@ -68,7 +68,7 @@
 						</div>
 						<div id="content">
 							<p3>
-								Despite the fact that social media has inarguably become an integral part of student life, there does not exist a reliable way for students to connect with each other on a classroom to classroom basis. Piazza and comparable applications offer similar features, but without the convenience and functionality of Zembo. Piazza only allows instructors to create and moderate classes, while students cannot create groups of their own. Additionally, Piazza does not offer a “private” group chat or functions that encourage actual congregation. We enable students to meet up and work together!<br><br>
+								Despite the fact that social media has inarguably become an integral part of student life, there does not exist a reliable way for students to connect with each other on a classroom to classroom basis. Piazza and comparable applications offer similar features, but without the convenience and functionality of Zembo. Piazza only allows instructors to create and moderate classes, while students cannot create groups of their own. Additionally, Piazza does not offer a “private” group chat or functions that encourage actual congregation. Students are bound to be less social under constant surveilance from the instructors. Apart from the virtual aspect, we encourage and enable students to meet up and work together!<br><br>
 
 									<div id="list">
 										<i>Studying with Zembo will allow students to:</i>
