--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -71,12 +71,19 @@
 								Despite the fact that social media has inarguably become an integral part of student life, there does not exist a reliable way for students to connect with each other on a classroom to classroom basis. Piazza and comparable applications offer similar features, but without the convenience and functionality of Zembo. Piazza only allows instructors to create and moderate classes, while students cannot create groups of their own. Additionally, Piazza does not offer a “private” group chat or functions that encourage actual congregation. Students are bound to be less social under constant surveilance from the instructors. Apart from the virtual aspect, we encourage and enable students to meet up and work together!<br><br>
 
 									<div id="list">
-										<i>Studying with Zembo will allow students to:</i>
+										<b><i>Studying with Zembo will allow students to:</i></b>
 										<ul id="anthony">
-											<li>Cover more ground per each session</li>
+											<li>Cover more ground each session</li>
 											<li>Share notes and announcements</li>
-											<li>Socialize</li>
-											<li>Boost motivation</li>
+											<li>Be on top of their work</li>
+											<li>Never miss an assignment</li>
+										</ul><br>
+										<b><i>Which would lead to:</i></b>
+										<ul id="anthony">
+											<li>In-class comfort</li>
+											<li>Less stress</li>
+											<li>Getting to know people</li>
+											<li>Better learning</li>
 										</ul>
 									</div>
 							</p3>
