changes to styling and about

--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -84,6 +84,7 @@
 											<li>Less stress</li>
 											<li>Getting to know people</li>
 											<li>Better learning</li>
+											<li>Better grades</li>
 										</ul>
 									</div>
 							</p3>
