--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,4 +107,11 @@ p2{
 	padding-top: 1%;
 }
 
+#content{
+	margin: 0 auto;
+	width: 80%;
+	padding: 2%;
+	background-color: #f2f2f2;
+}
+
 </style>
