changes to about page

--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -80,11 +80,11 @@
 										</ul><br>
 										<b><i>Which would lead to:</i></b>
 										<ul id="anthony">
-											<li>In-class comfort</li>
-											<li>Less stress</li>
-											<li>Getting to know people</li>
-											<li>Better learning</li>
-											<li>Better grades</li>
+											<li><b>In-class comfort</b> - meeting new people outside the classroom enhances your confidence and ability to speak up in class</li>
+											<li><b>Less stress</b> - being on top of your work will reduce stress levels and keep your mind at ease</li>
+											<li><b>Getting to know people</b> - joining groups and congregating outside the classroom helps you get to know more people</li>
+											<li><b>Better learning</b> - "Two heads our better than one". Bring in new perspectives and understand topics in an easier fasion</li>
+											<li><b>Better grades</b> - with better learning comes better grades</li>
 										</ul>
 									</div>
 							</p3>
