--- a/views/layouts/members.handlebars
+++ b/views/layouts/members.handlebars
@@ -48,6 +48,11 @@
       font-size: 25px;
     }
 
+    p{
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
     #head2{
       padding-bottom: 15px;
     }
@@ -71,7 +76,7 @@
 
   
   <center><h1>{{memberx.fname}} {{memberx.lname}}</h1>
-  <div class="Description"> {{memberx.desc}} </div></center>
+  <div class="Description"> <p>{{memberx.desc}}</p> </div></center>
         
 
       </div>
