--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -38,8 +38,15 @@
 			<div id="tp">
 
 				<div id="head">
-					<ul id="test">
+					<ul id="logo">
 						<center><p1><b>About Zembo</b></p1></center>
+					</ul>
+				</div>
+
+				<div id="panel1">
+					<ul id="test">
+						<center><img src ="imgs/logo.png" width="400px" height="250px"></center>
+						</div>
 					</ul>
 				</div>
 
