added logo to member pages

--- a/views/layouts/members.handlebars
+++ b/views/layouts/members.handlebars
@@ -86,6 +86,13 @@
       <div id="cont">
       <div id="tp">
 
+      <div id="panel1">
+          <ul id="test">
+            <center><img src ="imgs/logo.png" width="200" height="125px"></center>
+            </div>
+          </ul>
+        </div>
+
   
       <center><h1>{{memberx.fname}} {{memberx.lname}}</h1></center>
       <div class="Description"> {{memberx.desc}}
