--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -69,6 +69,13 @@
       <div id="cont">
       <div id="tp">
 
+      <div id="panel1">
+          <ul id="test">
+            <center><img src ="imgs/logo.png" width="155" height="95px"></center>
+            </div>
+          </ul>
+        </div>
+
      <center> <h1>Team Portfolio</h1>
 
       <div id="head2"><h2>Meet the Members</h2></div>
