--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -45,9 +45,11 @@
 
 				<div id="panel1">
 					<ul id="test">
-						<center><img src ="imgs/logo.png" width="400px" height="250px"></center>
+						<center><img src ="imgs/logo.png" width="350px" height="210px"></center>
+						<center><p4><b>"Work alone no more"</b></p4></center>
 						</div>
 					</ul>
+					
 				</div>
 
 				<div id="panel1">
