--- a/views/layouts/about.handlebars
+++ b/views/layouts/about.handlebars
@@ -55,7 +55,7 @@
 						<b><center><p2>The Idea</p2></center></b>
 						<div id="content">
 							<p3>
-							Zembo is an app that allows students to communicate and connect with each other. It helps you to eliminate the tedium and stress of maintaining study groups or joining cliques. The idea is to allow you to connect with your entire class instantly.
+							Zembo is an app that allows students to physically communicate and connect with each other. It helps eliminate the tedium and stress of maintaining study groups or joining cliques. The idea is to allow you to effectively meetup with anyone from class and work right away.
 
 							It is the next big step in efficient and effective learning. After a quick and easy account creation, students will be able to join “classrooms”, create new posts in a QA discussion-based environment, and even begin group chats. Students can create and schedule events or meetings to collaborate in person on assignments.
 							</p3>
@@ -104,7 +104,7 @@
 					<ul id="test">
 						<b><center><p2>Our Goal</p2></center></b>
 						<div id="content">
-							<center><p3>Our goal is to create a more enjoyable, convenient, and stress free way for students to work cooperatively on campus.</p3></center>
+							<center><p3>Our goal is to create a more enjoyable, convenient, and stress-free way for students to work cooperatively on campus!</p3></center>
 						</div>
 					</ul>
 				</div>
