--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -48,8 +48,11 @@
       font-size: 25px;
     }
 
-    #head2{
-      padding-bottom: 15px;
+    .Description{
+      background-color: #f2f2f2;
+      padding: 2%;
+      width: 70%;
+      margin: 0 auto;
     }
 
     </style>
@@ -82,7 +85,7 @@
         {{#each members}}
         <div class="memberName"><a href="?user={{this.user}}">{{this.fname}} {{this.lname}}</a></div>
         <div class="positionClass">{{this.pos}}</div>
-         <!-- <div class="Description">{{this.desc}}</div> -->
+        <div class="Description">{{this.desc}}</div> 
           <div></div>
           <div></div>
         {{/each}}</center>
