--- a/views/layouts/team.handlebars
+++ b/views/layouts/team.handlebars
@@ -25,7 +25,10 @@
 
     <style type="text/css">
     .memberName{
-      padding: 10px;
+      padding-top: 10px;
+      padding-right: 10px;
+      padding-left: 10px;
+      padding-bottom: 2px;
     }  
 
     .memberName a{
