--- a/views/layouts/login.handlebars
+++ b/views/layouts/login.handlebars
@@ -53,12 +53,12 @@
         </div>
 
         <div id="panel1">
-           <div id="form">
+          <center> <div id="form">
             <form>
               <input type="text" name="username" placeholder="username" required><br>
               <input type="password" name="password" placeholder="password" required><br>
               <button class="btn">Login</button>
-            </form>
+            </form></center>
           </div>
         </div>
 
