--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -54,11 +54,12 @@
 
         <div id="panel1">
           <center> <div id="form">
-            <form>
-              <input type="text" name="username" placeholder="username" required><br>
-              <input type="password" name="password" placeholder="password" required><br>
-              <button class="btn">Login</button>
-            </form></center>
+              <form>
+                <input type="text" name="username" placeholder="username" required><br>
+                <input type="password" name="password" placeholder="password" required><br>
+                <button class="btn">Login</button>
+              </form>
+            </center>
           </div>
         </div>
 
