--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -94,8 +94,8 @@
         </div>
 
   
-      <center><h1>{{memberx.fname}} {{memberx.lname}}</h1></center>
-      <div class="Description"> {{memberx.desc}}
+      <center><h1>{{member.fname}} {{member.lname}}</h1></center>
+      <div class="Description"> {{member.desc}}
       </div>
       <center><a href="team"> GO BACK </a></center>
 
