Patched up registration route

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -59,7 +59,7 @@
                   <input type="password" name="pass" placeholder="password" required><br>
                   <button class="btn">Login</button>
                </form>
-               Don't have an account? <a href="signup">Click here</a>
+               Don't have an account? <a href="registration">Click here</a>
             </center>
           </div>
         </div>
