--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -54,7 +54,7 @@
          <div id="panel1">
           <center> <div id="form">
                <p>{{message}}</p>
-               <form method="post" action="/user/signup">
+               <form method="post" action="/user/register">
                   <input type="text" name="fname" placeholder="first name" required><br> 
                   <input type="text" name="lname" placeholder="last name" required><br> 
                   <input type="text" name="email" placeholder="email" required><br> 
