Added checking for existing accounts during registration

--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -85,13 +85,12 @@
      <center> <h1>Team Portfolio</h1>
 
       <div id="head2"><h2>Meet the Members</h2></div>
-        {{#each members}}
-        <div class="memberName"><a href="?user={{this.user}}">{{this.fname}} {{this.lname}}</a></div>
-        <div class="positionClass">{{this.pos}}</div>
-        <div class="Description">{{this.desc}}</div> 
-          <div></div>
-          <div></div>
-        {{/each}}</center>
+      {{#each members}}
+      <div class="memberName"><a href="?user={{this.user}}">{{this.fname}} {{this.lname}}</a></div>
+      <div class="positionClass">{{this.pos}}</div>
+      <div class="Description">{{this.desc}}</div> 
+      {{/each}}
+    </center>
         
 
       </div>
