--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -39,7 +39,7 @@
 
         <div id="head">
           <ul id="logo">
-            <center><p1><b>Zembo</b></p1></center>
+            <center><p1><b>{{title}}</b></p1></center>
           </ul>
         </div>
 
