admin controls page cool

--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -2,10 +2,35 @@
 
 <html>
   <head>
-
+		<link rel="stylesheet" type="text/css" href="css/adminControls.css" />
   </head>
 
   <body>
+
+  		<h1>Admin Controls</h1>
+
+  		<hr>
+  		<a class="link" href="/">
+  			<div class="linkText">
+  				Flagged Users
+  			</div>
+  		</a>
+
+  		<a class="link" href="/">
+  			<div class="linkText">
+  				Classes
+  			</div>
+  		</a>
+
+  		<a class="link" href="/">
+  			<div class="linkText">
+  				Flagged Messages
+  			</div>
+  		</a>
+
+
+
+
   	
   </body>
 
