--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,8 @@
 <html>
   
   <head>
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel = "stylesheet" type = "text/css" href = "css/index.css" />
+    <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     
     <script> 
     $(document).ready(function(){
@@ -14,104 +14,174 @@
     </script>
   </head>
 
-  <div id="page">
-    <div class="header">
-    <a href="#menu"></a>
+  <div id = "page">
+    <div class = "header">
+    <a href = "#menu"></a>
       Zembo
     </div>
     </div>
-    <div class="content"> 
+    <div class = "content"> 
     
     </div>
 
-    <div id="cont">
-    <div id="tp">
+    <div id = "cont">
+    <div id = "tp">
 
-      <!--<ul id = "topbar"></ul>-->
-      <ul id = "class">
-        <div id="classname">
+      <ul id  = "class">
+        <div id = "classname">
           <p1>COMPSCI 311</p1>
-          <p2>Algorithms - Ramesh Sitaraman</p2>
+          <p2>Introduction to Algorithms</p2>
         </div>
-        <div id="students">
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+        <div id = "students">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/anthony.jpg" alt = "Anthony">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/harsh.jpg" alt="Harsh">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/harsh.jpg" alt = "Harsh">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/ben.jpg" alt = "Ben">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/zach.jpg" alt="Zachary">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/zach.jpg" alt = "Zachary">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/jon.jpg" alt = "John">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/dylan.jpg" alt="Dylan">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/dylan.jpg" alt = "Dylan">
             
           </div>
         </div>
-        <i id="dropdown" class="fa fa-plus-circle"></i>
+        <i id = "dropdown" class = "fa fa-chevron-down"></i>
       </ul>
 
       <div id = "extend">
         <ul>
-          
+          <li>
+            <i id = "cap" class = "fa fa-graduation-cap"></i>
+            <i id = "pencil" class = "fa fa-pencil-square-o"></i>
+            <i id = "calendar" class = "fa fa-calendar"></i>
+            <i id = "event" class = "fa fa-plus-square-o"></i>
+          </li>
         </ul>
       </div>
 
       <ul id = "class">
-        <div id="classname">
+        <div id = "classname">
           <p1>COMPSCI 326</p1>
-          <p2>Web Programming - Tim Richards</p2>
+          <p2>Web Programming</p2>
         </div>
-        <div id="students">
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+        <div id = "students">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/anthony.jpg" alt = "Anthony">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/harsh.jpg" alt="Harsh">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/harsh.jpg" alt = "Harsh">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/ben.jpg" alt = "Ben">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/zach.jpg" alt="Zachary">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/zach.jpg" alt = "Zachary">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/jon.jpg" alt = "John">
             
           </div>
-          <div id="studentBody">
-            <img id="studentImage" src="imgs/users/dylan.jpg" alt="Dylan">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/dylan.jpg" alt = "Dylan">
             
           </div>
         </div>
-        <i id="dropdown" class="fa fa-plus-circle"></i>
+        <i id = "dropdown" class = "fa fa-chevron-down"></i>
       </ul>
 
+      <ul id = "class">
+        <div id = "classname">
+          <p1>COMPSCI 230</p1>
+          <p2>Computer Systems Principles</p2>
+        </div>
+        <div id = "students">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/anthony.jpg" alt = "Anthony">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/harsh.jpg" alt = "Harsh">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/ben.jpg" alt = "Ben">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/zach.jpg" alt = "Zachary">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/jon.jpg" alt = "John">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/dylan.jpg" alt = "Dylan">
+            
+          </div>
+        </div>
+        <i id = "dropdown" class = "fa fa-chevron-down"></i>
+      </ul>
 
+      <ul id = "class">
+        <div id = "classname">
+          <p1>COMPSCI 240</p1>
+          <p2>Reasoning Under Uncertainty</p2>
+        </div>
+        <div id = "students">
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/anthony.jpg" alt = "Anthony">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/harsh.jpg" alt = "Harsh">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/ben.jpg" alt = "Ben">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/zach.jpg" alt = "Zachary">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/jon.jpg" alt = "John">
+            
+          </div>
+          <div id = "studentBody">
+            <img id = "studentImage" src = "imgs/users/dylan.jpg" alt = "Dylan">
+            
+          </div>
+        </div>
+        <i id = "dropdown" class = "fa fa-chevron-down"></i>
+      </ul>
 
     </div>
     </div>
-    <nav id="menu">
+    <nav id = "menu">
       <ul>
-        <li><a href="http://localhost:3000">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="team">Team</a></li>
-        <li><a href="mockups">Layout</a></li>
+        <li><a href = "http://localhost:3000">Home</a></li>
+        <li><a href = "about">About</a></li>
+        <li><a href = "team">Team</a></li>
+        <li><a href = "mockups">Layout</a></li>
       </ul>
     </nav>
   </div>
