--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,4 +25,15 @@
   <body>
     {{{body}}}
   </body>
+
+  <div>
+    <nav id="menu">
+      <ul>
+        <li><a href="http://localhost:3000">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="team">Team</a></li>
+        <li><a href="mockups">Layout</a></li>
+      </ul>
+    </nav>
+  </div>
 </html>
