--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -2,14 +2,22 @@
 
 <html>
   <head>
-		<link rel="stylesheet" type="text/css" href="css/adminControls.css" />
+		<link rel="stylesheet" type="text/css" href="../css/adminControls.css" />
   </head>
 
   <body>
+  <div id="page">
+    <div class="header">
+    <a href="#menu"></a>
+      {{title}}
+    </div>
+    </div>
 
-  		<h1>Admin Controls</h1>
+    <div id="cont">
+    <div id="tp">
 
-  		<hr>
+  		<!-- <h1>Admin Controls</h1> -->
+
   		<a class="link" href="/">
   			<div class="linkText">
   				Flagged Users
@@ -29,8 +37,18 @@
   		</a>
 
 
+  		</div>
+  		</div>
 
-
+  		<nav id="menu">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="team">Team</a></li>
+        <li><a href="mockups">Layout</a></li>
+        <li><a href="admin/adminControls">Admin</a></li>
+      </ul>
+    </nav>
   	
   </body>
 
