--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -94,10 +94,11 @@
     </div>
     <nav id="menu">
       <ul>
-        <li><a href="http://localhost:3000">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
         <li><a href="team">Team</a></li>
         <li><a href="mockups">Layout</a></li>
+        <li><a href="admin/adminControls">Admin</a></li>
       </ul>
     </nav>
   </div>
