--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="300" >
-    <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
+    <meta charset = "utf-8" />
+    <meta http-equiv = "refresh" content = "300" >
+    <meta name = "viewport" content = "width = device-width initial-scale = 1.0 maximum-scale = 1.0 user-scalable = yes" />
     
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link type="text/css" rel="stylesheet" href="../css/demo.css" />
-    <link type="text/css" rel="stylesheet" href="../dist/css/jquery.mmenu.all.css" />
+    <link rel = "stylesheet" type = "text/css" href = "../css/main.css" />
+    <link type = "text/css" rel = "stylesheet" href = "../css/demo.css" />
+    <link type = "text/css" rel = "stylesheet" href = "../dist/css/jquery.mmenu.all.css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="../dist/js/jquery.mmenu.min.all.js"></script>
-    <script type="text/javascript">
+    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script type = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type = "text/javascript" src = "../dist/js/jquery.mmenu.min.all.js"></script>
+    <script type = "text/javascript">
       $(function() {
         $('nav#menu').mmenu();
       });
@@ -27,12 +27,11 @@
   </body>
 
   <div>
-    <nav id="menu">
+    <nav id = "menu">
       <ul>
-        <li><a href="http://localhost:3000">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="team">Team</a></li>
-        <li><a href="mockups">Layout</a></li>
+        <li><a href = "/index">Home</a></li>
+        <li><a href = "/about">About</a></li>
+        <li><a href = "/team">Team</a></li>
       </ul>
     </nav>
   </div>
