--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
         <li><a href = "/index">Home</a></li>
         <li><a href = "/about">About</a></li>
         <li><a href = "/team">Team</a></li>
+        <li><a href = "/user/logout">Logout</a></li>
       </ul>
     </nav>
   </div>
