--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -3,31 +3,33 @@
 
   <div id = "page">
     <div class = "header">
-    <a href = "#menu"></a>
+      <a href = "#menu"></a>
       Zembo
     </div>
-    </div>
-    <div class = "content"> 
+  </div>
     
-    </div>
+  <div class = "content"> 
+    
+  </div>
   
-    <div id = "cont">
+  <div id = "cont">
     <div id = "tp">
-
-    <div id = "panel1">
+      <div id = "panel1">
         <ul id = "test">
           <center><img src  = "imgs/logo.png" width = "200" height = "125px"></center>
-          </div>
         </ul>
       </div>
+    </div>
 
-
-    <center><h1>{{member.fname}} {{member.lname}}</h1></center>
-    <div class = "Description"> {{member.desc}}
+    <center>
+      <h1>
+        {{member.fname}} {{member.lname}}
+      </h1>
+    </center>
+    <div class = "Description">
+      {{member.desc}}
     </div>
     <center><a href = "team"> GO BACK </a></center>
-
-    </div>
   </div>
   
 </html>
