added users and currently adding classes in admin controls

--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -24,7 +24,7 @@
   			</div>
   		</a>
 
-  		<a class="link" href="/">
+  		<a class="link" href="/admin/classes">
   			<div class="linkText">
   				Classes
   			</div>
