--- a/public/css/adminControls.css
+++ b/public/css/adminControls.css
@@ -17,3 +17,14 @@ h1{
 	margin-right: 20%;
 	font-size: 2em;
 }
+
+ th, td {
+   border: 1px solid black;
+	padding: 5%;
+	text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+	text-align: center;
+}
