--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,10 +29,10 @@
   <div>
     <nav id = "menu">
       <ul>
-        <li><a href="http://localhost:3000">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="team">Team</a></li>
-        <li><a href="admin/adminControls">Admin</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/team">Team</a></li>
+        <li><a href="/admin/adminControls">Admin</a></li>
       </ul>
     </nav>
   </div>
