Updated routes and handlebars

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,9 +7,7 @@
     </div>
   </div>
   
-  <div class = "content"> 
-    
-  </div>
+  <div class = "content"></div>
 
   <div id = "cont">
     <div id = "tp">
@@ -39,8 +37,6 @@
         </ul>
       </div>
 
-
-
       <div id = "panel3">
         <ul id = "test">
           <b><center><p2>Why?</p2></center></b>
@@ -53,23 +49,23 @@
             <p3>
               Despite the fact that social media has inarguably become an integral part of student life, there does not exist a reliable way for students to connect with each other on a classroom to classroom basis. Piazza and comparable applications offer similar features, but without the convenience and functionality of Zembo. Piazza only allows instructors to create and moderate classes, while students cannot create groups of their own. Additionally, Piazza does not offer a “private” group chat or functions that encourage actual congregation. Students are bound to be less social under constant surveilance from the instructors. Apart from the virtual aspect, we encourage and enable students to meet up and work together!<br><br>
 
-                <div id = "list">
-                  <b><i>Studying with Zembo will allow students to:</i></b>
-                  <ul id = "anthony">
-                    <li>Cover more ground each session</li>
-                    <li>Share notes and announcements</li>
-                    <li>Be on top of their work</li>
-                    <li>Never miss an assignment</li>
-                  </ul><br>
-                  <b><i>Which would lead to:</i></b>
-                  <ul id = "anthony">
-                    <li><b>In-class comfort</b> - meeting new people outside the classroom enhances your confidence and ability to speak up in class</li>
-                    <li><b>Less stress</b> - being on top of your work will reduce stress levels and keep your mind at ease</li>
-                    <li><b>Getting to know people</b> - joining groups and congregating outside the classroom helps you get to know more people</li>
-                    <li><b>Better learning</b> - "Two heads our better than one". Bring in new perspectives and understand topics in an easier fasion</li>
-                    <li><b>Better grades</b> - with better learning comes better grades</li>
-                  </ul>
-                </div>
+              <div id = "list">
+                <b><i>Studying with Zembo will allow students to:</i></b>
+                <ul id = "anthony">
+                  <li>Cover more ground each session</li>
+                  <li>Share notes and announcements</li>
+                  <li>Be on top of their work</li>
+                  <li>Never miss an assignment</li>
+                </ul><br>
+                <b><i>Which would lead to:</i></b>
+                <ul id = "anthony">
+                  <li><b>In-class comfort</b> - meeting new people outside the classroom enhances your confidence and ability to speak up in class</li>
+                  <li><b>Less stress</b> - being on top of your work will reduce stress levels and keep your mind at ease</li>
+                  <li><b>Getting to know people</b> - joining groups and congregating outside the classroom helps you get to know more people</li>
+                  <li><b>Better learning</b> - "Two heads our better than one". Bring in new perspectives and understand topics in an easier fasion</li>
+                  <li><b>Better grades</b> - with better learning comes better grades</li>
+                </ul>
+              </div>
             </p3>
           </div>
         </ul>
