--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,9 +20,7 @@
     </div>
   </div>
   
-  <div class = "content"> 
-    
-  </div>
+  <div class = "content"></div>
 
     <div id = "cont">
       <div id = "tp">
@@ -172,7 +170,6 @@
           </div>
           <i id = "dropdown" class = "fa fa-chevron-down"></i>
         </ul>
-
       </div>
     </div>
   </div>
