--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset = "utf-8" />
     <meta http-equiv = "refresh" content = "300" >
@@ -32,9 +33,11 @@
         <li><a href = "/index">Home</a></li>
         <li><a href = "/about">About</a></li>
         <li><a href = "/team">Team</a></li>
-        <li><a href="/admin/adminControls">Admin</a></li>
+        <li><a href = "/user/profile?">Profile</a></li>
+        <li><a href = "/admin/adminControls">Admin</a></li>
         <li><a href = "/user/logout">Logout</a></li>
       </ul>
     </nav>
   </div>
+  
 </html>
