fixed icons in index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,13 +60,13 @@
           <i id = "dropdown" class = "fa fa-chevron-down"></i>
         </ul>
 
-        <div id = "extend">
+        <div id = "extend" >
           <ul>
             <li>
-              <i id = "cap" class = "fa fa-graduation-cap"></i>
-              <i id = "pencil" class = "fa fa-pencil-square-o"></i>
-              <i id = "calendar" class = "fa fa-calendar"></i>
-              <i id = "event" class = "fa fa-plus-square-o"></i>
+              <i id = "cap" class = "icon fa fa-graduation-cap fa-5x"></i>
+              <i id = "pencil" class = "icon fa fa-pencil-square-o fa-5x"></i>
+              <i id = "calendar" class = "icon fa fa-calendar fa-5x"></i>
+              <i id = "event" class = "icon fa fa-plus-square-o fa-5x"></i>
             </li>
           </ul>
         </div>
