--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
         <li><a href = "/index">Home</a></li>
         <li><a href = "/about">About</a></li>
         <li><a href = "/team">Team</a></li>
-        <li><a href = "/user/profile?">Profile</a></li>
+        <li><a href = "/user/profile">Profile</a></li>
         <li><a href = "/admin/adminControls">Admin</a></li>
         <li><a href = "/user/logout">Logout</a></li>
       </ul>
