--- a/public/css/adminControls.css
+++ b/public/css/adminControls.css
@@ -2,7 +2,7 @@ h1{
 	text-align: center;
 }
 
-.link{
+a:link{
 	text-decoration: none;
 }
 
@@ -13,18 +13,19 @@ h1{
 	margin-top: 3%;
 	padding: 3%;
 	text-align: center;
+	text-decoration: none;
 	margin-left: 20%;
 	margin-right: 20%;
 	font-size: 2em;
 }
 
- th, td {
-   border: 1px solid black;
+th, td {
+  border: 1px solid black;
 	padding: 5%;
 	text-align: center;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 	text-align: center;
 }
