--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -2,41 +2,50 @@
 <html>
 
   <head>
-		<link rel="stylesheet" type="text/css" href="../css/adminControls.css" />
+		<link rel = "stylesheet" type = "text/css" href = "../css/adminControls.css" />
   </head>
 
-  <div id="page">
-    <div class="header">
-      <a href="#menu"></a>
-      {{title}}
+  <div id = "page">
+    <div class = "header">
+      <a href = "#menu"></a>
+      Zembo
     </div>
   </div>
 
-  <div id="cont">
-    <div id="tp">
-
-  		<!-- <h1>Admin Controls</h1> -->
-
-  		<a class="link" href="/admin/userList">
-  			<div class="linkText">
-  				Flagged Users
-  			</div>
-  		</a>
-
-  		<a class="link" href="/admin/classes">
-  			<div class="linkText">
-  				Classes
-  			</div>
-  		</a>
-
-  		<a class="link" href="/">
-  			<div class="linkText">
-  				Flagged Messages
-  			</div>
-  		</a>
-
-
+  <div id = "cont">
+    <div id = "tp">
+      <div id = "head">
+        <ul id = "logo">
+          <center><p1><b>{{title}}</b></p1></center>
+        </ul>
+      </div>
   	</div>
+
+    <div id = "panel1">
+        <ul id = "test">
+          <center><img src = "../imgs/logo.png" width = "350px" height = "210px"></center>
+          <center><p4><b>"Work alone no more"</b></p4></center>
+        </ul>
+      </div>
+      
+
+      <a class = "link" href = "/admin/users">
+        <div class = "linkText">
+          Flagged Users
+        </div>
+      </a>
+
+      <a class = "link" href = "/admin/classes">
+        <div class = "linkText">
+          Classes
+        </div>
+      </a>
+
+      <a class = "link" href = "/admin/controls">
+        <div class = "linkText">
+          Flagged Messages
+        </div>
+      </a>
   </div>
 
 </html>
