--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
       <div id = "panel1">
         <ul id = "test">
           <center><img src = "../imgs/logo.png" width = "350px" height = "210px"></center>
-          
+          <center><p4><b>"Work alone no more"</b></p4></center>
         </ul>
       </div>
     </div>
