--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
         <li><a href = "/about">About</a></li>
         <li><a href = "/team">Team</a></li>
         <li><a href = "/user/profile">Profile</a></li>
-        <li><a href = "/admin/controls">Admin</a></li>
+        <li><a href = "/admin/controls" action = "/admin/auth">Admin</a></li>
         <li><a href = "/user/logout">Logout</a></li>
       </ul>
     </nav>
