Added querying for team data from the database

--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -34,8 +34,8 @@
     
         {{#each members}}
         <div class = "memberName"><a href = "?user = {{this.user}}">{{this.fname}} {{this.lname}}</a></div>
-        <div class = "positionClass">{{this.pos}}</div>
-        <div class = "Description">{{this.desc}}</div> 
+        <div class = "positionClass">{{this.role}}</div>
+        <div class = "Description">{{this.description}}</div> 
         {{/each}}
       </center>
     </div>
