Added profile css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
     <script> 
       $(document).ready(function() {
         $("#class").click(function() {
-          $("#extend").slideToggle("slow");
+          $("#extend").slideToggle("fast");
         });
       });
     </script>
