--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -102,6 +102,17 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
+        <div id="extend" >
+          <ul>
+            <li>
+              <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
+              <i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i>
+              <i id="calendar" class="icon fa fa-calendar fa-5x"></i>
+              <i id="event" class="icon fa fa-plus-square-o fa-5x"></i>
+            </li>
+          </ul>
+        </div>
+
         <ul id="class">
           <div id="classname">
             <p1>COMPSCI 230</p1>
@@ -136,6 +147,17 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
+        <div id="extend" >
+          <ul>
+            <li>
+              <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
+              <i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i>
+              <i id="calendar" class="icon fa fa-calendar fa-5x"></i>
+              <i id="event" class="icon fa fa-plus-square-o fa-5x"></i>
+            </li>
+          </ul>
+        </div>
+
         <ul id="class">
           <div id="classname">
             <p1>COMPSCI 240</p1>
@@ -169,6 +191,17 @@
           </div>
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
+
+        <div id="extend" >
+          <ul>
+            <li>
+              <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
+              <i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i>
+              <i id="calendar" class="icon fa fa-calendar fa-5x"></i>
+              <i id="event" class="icon fa fa-plus-square-o fa-5x"></i>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
